# api-designer

./: .gitignore  LICENSE  README.ko.md  README.md  README.zh.md
backend/: .env.example  config.py  main.py  pyproject.toml  security.py
backend/models/: form_schema.py  project.py  session.py  traffic.py
backend/routers/: analysis.py  browser.py  codegen.py  manual.py  project.py  session.py  settings.py
backend/services/: browser_service.py  claude_analyzer.py  code_generator.py  project_manager.py  session_manager.py  traffic_recorder.py
backend/ws/: stream.py
flutter_app/: README.md  pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/models/: analysis_result.dart  form_schema.dart  manual_models.dart  project.dart  traffic_entry.dart
flutter_app/lib/screens/: analysis_screen.dart  codegen_screen.dart  home_screen.dart  manual_screen.dart  project_list_screen.dart  record_screen.dart  settings_screen.dart  shell.dart
flutter_app/lib/services/: api_service.dart  app_state.dart  python_service.dart  ws_service.dart
flutter_app/lib/widgets/: code_viewer.dart  dynamic_form.dart  traffic_list.dart
flutter_app/macos/: Podfile
flutter_app/macos/Runner/: MainFlutterWindow.swift
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/macos/Runner/Configs/: AppInfo.xcconfig  Debug.xcconfig
flutter_app/test/: widget_test.dart
