[project]
name = "api-designer-backend"
version = "0.3.0"
description = "API Designer — manual web API traffic recorder with Claude-powered analysis & client code generation"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "playwright>=1.49.0",
    "anthropic>=0.44.0",
    "pydantic>=2.10.0",
    "websockets>=14.1",
    "aiofiles>=24.1.0",
]

[project.scripts]
api-designer = "main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
